# controller/categoriacontroller.go
@@ -24,8 +24,7 @@ func NewCategoriaController(categoriaService *service.CategoriaService) *Categor
 //	@Tags			categorias
 //	@Accept			json
 //	@Produce		json
-//	@Success		200				{array}		model.Categoria
-//	@Failure		401				{object}	config.HTTPError401
+//	@Success		200				{array}	model.Categoria
 //	@Router			/categorias 	[get]
 //	@Security		Bearer
 func (categoriaController *CategoriaController) FindAll(c *fiber.Ctx) error {
@@ -41,11 +40,8 @@ func (categoriaController *CategoriaController) FindAll(c *fiber.Ctx) error {
 //	@Tags			categorias
 //	@Accept			json
 //	@Produce		json
-//	@Param			id					path		string	true	"Id da Categoria"
-//	@Success		200					{array}		model.Categoria
-//	@Failure		400					{object}	config.HTTPError400
-//	@Failure		401					{object}	config.HTTPError401
-//	@Failure		404					{object}	config.HTTPError404
+//	@Param			id					path	string	true	"Id da Categoria"
+//	@Success		200					{array}	model.Categoria
 //	@Router			/categorias/{id} 	[get]
 //	@Security		Bearer
 func (categoriaController *CategoriaController) FindById(context *fiber.Ctx) error {
@@ -69,10 +65,8 @@ func (categoriaController *CategoriaController) FindById(context *fiber.Ctx) err
 //	@Tags			categorias
 //	@Accept			json
 //	@Produce		json
-//	@Param			grupo						path		string	true	"Grupo do Medicamento (Antibiótico, Antihistamínico, entre outros)"
-//	@Success		200							{array}		model.Categoria
-//	@Failure		400							{object}	config.HTTPError400
-//	@Failure		401							{object}	config.HTTPError401
+//	@Param			grupo						path	string	true	"Grupo do Medicamento (Antibiótico, Antihistamínico, entre outros)"
+//	@Success		200							{array}	model.Categoria
 //	@Router			/categorias/grupo/{grupo} 	[get]
 //	@Security		Bearer
 func (categoriaController *CategoriaController) FindByGrupo(context *fiber.Ctx) error {
@@ -99,8 +93,6 @@ func (categoriaController *CategoriaController) FindByGrupo(context *fiber.Ctx) 
 //	@Produce		json
 //	@Param			categoria	body		model.Categoria	true	"Criar Categoria"
 //	@Success		201			{object}	model.Categoria
-//	@Failure		400			{object}	config.HTTPError400
-//	@Failure		401			{object}	config.HTTPError401
 //	@Router			/categorias [post]
 //	@Security		Bearer
 func (categoriaController *CategoriaController) Create(context *fiber.Ctx) error {
@@ -139,9 +131,6 @@ func (categoriaController *CategoriaController) Create(context *fiber.Ctx) error
 //	@Produce		json
 //	@Param			Categoria	body		model.Categoria	true	"Atualizar Categoria"
 //	@Success		200			{object}	model.Categoria
-//	@Failure		400			{object}	config.HTTPError400
-//	@Failure		401			{object}	config.HTTPError401
-//	@Failure		404			{object}	config.HTTPError404
 //	@Router			/categorias [put]
 //	@Security		Bearer
 func (categoriaController *CategoriaController) Update(context *fiber.Ctx) error {
@@ -191,9 +180,6 @@ func (categoriaController *CategoriaController) Update(context *fiber.Ctx) error
 //	@Produce		json
 //	@Param			id	path		string	true	"Id da Categoria"
 //	@Success		204	{string}	string
-//	@Failure		400	{object}	config.HTTPError400
-//	@Failure		401	{object}	config.HTTPError401
-//	@Failure		404	{object}	config.HTTPError404
 //	@Router			/categorias/{id} [delete]
 //	@Security		Bearer
 func (categoriaController *CategoriaController) Delete(context *fiber.Ctx) error {
