# controller/produtocontroller.go
@@ -28,8 +28,7 @@ func NewProdutoController(produtoService *service.ProdutoService, categoriaServi
 //	@Tags			produtos
 //	@Accept			json
 //	@Produce		json
-//	@Success		200	{array}		model.Produto
-//	@Failure		401	{object}	config.HTTPError401
+//	@Success		200	{array}	model.Produto
 //	@Router			/produtos [get]
 //	@Security		Bearer
 func (produtoController *ProdutoController) FindAll(context *fiber.Ctx) error {
@@ -45,11 +44,8 @@ func (produtoController *ProdutoController) FindAll(context *fiber.Ctx) error {
 //	@Tags			produtos
 //	@Accept			json
 //	@Produce		json
-//	@Param			id	path		string	true	"Id do Produto"
-//	@Success		200	{array}		model.Produto
-//	@Failure		400	{object}	config.HTTPError400
-//	@Failure		401	{object}	config.HTTPError401
-//	@Failure		404	{object}	config.HTTPError404
+//	@Param			id	path	string	true	"Id do Produto"
+//	@Success		200	{array}	model.Produto
 //	@Router			/produtos/{id} [get]
 //	@Security		Bearer
 func (produtoController *ProdutoController) FindById(context *fiber.Ctx) error {
@@ -74,10 +70,8 @@ func (produtoController *ProdutoController) FindById(context *fiber.Ctx) error {
 //	@Tags			produtos
 //	@Accept			json
 //	@Produce		json
-//	@Param			nome	path		string	true	"Nome do Produto"
-//	@Success		200		{array}		model.Produto
-//	@Failure		400		{object}	config.HTTPError400
-//	@Failure		401		{object}	config.HTTPError401
+//	@Param			nome	path	string	true	"Nome do Produto"
+//	@Success		200		{array}	model.Produto
 //	@Router			/produtos/nome/{nome} [get]
 //	@Security		Bearer
 func (produtoController *ProdutoController) FindByNome(context *fiber.Ctx) error {
@@ -104,8 +98,6 @@ func (produtoController *ProdutoController) FindByNome(context *fiber.Ctx) error
 //	@Produce		json
 //	@Param			produto	body		model.Produto	true	"Criar Produto"
 //	@Success		201		{object}	model.Produto
-//	@Failure		400		{object}	config.HTTPError400
-//	@Failure		401		{object}	config.HTTPError401
 //	@Router			/produtos [post]
 //	@Security		Bearer
 func (produtoController *ProdutoController) Create(context *fiber.Ctx) error {
@@ -155,9 +147,6 @@ func (produtoController *ProdutoController) Create(context *fiber.Ctx) error {
 //	@Produce		json
 //	@Param			Produto	body		model.Produto	true	"Atualizar Produto"
 //	@Success		200		{object}	model.Produto
-//	@Failure		400		{object}	config.HTTPError400
-//	@Failure		401		{object}	config.HTTPError401
-//	@Failure		404		{object}	config.HTTPError404
 //	@Router			/produtos [put]
 //	@Security		Bearer
 func (produtoController *ProdutoController) Update(context *fiber.Ctx) error {
@@ -217,9 +206,6 @@ func (produtoController *ProdutoController) Update(context *fiber.Ctx) error {
 //	@Produce		json
 //	@Param			id	path		string	true	"Id do Produto"
 //	@Success		204	{string}	string
-//	@Failure		400	{object}	config.HTTPError400
-//	@Failure		401	{object}	config.HTTPError401
-//	@Failure		404	{object}	config.HTTPError404
 //	@Router			/produtos/{id} [delete]
 //	@Security		Bearer
 func (produtoController *ProdutoController) Delete(context *fiber.Ctx) error {
