# controller/usuariocontroller.go
@@ -24,8 +24,7 @@ func NewUsuarioController(usuarioService *service.UsuarioService) *UsuarioContro
 //	@Tags			usuarios
 //	@Accept			json
 //	@Produce		json
-//	@Success		200				{array}		model.Usuario
-//	@Failure		401				{object}	config.HTTPError401
+//	@Success		200				{array}	model.Usuario
 //	@Router			/usuarios/all 	[get]
 //	@Security		Bearer
 func (usuarioController *UsuarioController) FindAll(context *fiber.Ctx) error {
@@ -41,11 +40,8 @@ func (usuarioController *UsuarioController) FindAll(context *fiber.Ctx) error {
 //	@Tags			usuarios
 //	@Accept			json
 //	@Produce		json
-//	@Param			id				path		string	true	"Id do Usuario"
-//	@Success		200				{array}		model.Usuario
-//	@Failure		400				{object}	config.HTTPError400
-//	@Failure		401				{object}	config.HTTPError401
-//	@Failure		404				{object}	config.HTTPError404
+//	@Param			id				path	string	true	"Id do Usuario"
+//	@Success		200				{array}	model.Usuario
 //	@Router			/usuarios/{id} 	[get]
 //	@Security		Bearer
 func (usuarioController *UsuarioController) FindById(context *fiber.Ctx) error {
@@ -72,8 +68,6 @@ func (usuarioController *UsuarioController) FindById(context *fiber.Ctx) error {
 //	@Produce		json
 //	@Param			usuario		body		model.Usuario	true	"Criar Usuario"
 //	@Success		201			{object}	model.Usuario
-//	@Failure		400			{object}	config.HTTPError400
-//	@Failure		404			{object}	config.HTTPError401
 //	@Router			/usuarios 	[post]
 func (usuarioController *UsuarioController) Create(context *fiber.Ctx) error {
 
@@ -119,9 +113,6 @@ func (usuarioController *UsuarioController) Create(context *fiber.Ctx) error {
 //	@Produce		json
 //	@Param			Usuario					body		model.Usuario	true	"Atualizar Usuario"
 //	@Success		200						{object}	model.Usuario
-//	@Failure		400						{object}	config.HTTPError400
-//	@Failure		401						{object}	config.HTTPError401
-//	@Failure		404						{object}	config.HTTPError404
 //	@Router			/usuarios/atualizar 	[put]
 //	@Security		Bearer
 func (usuarioController *UsuarioController) Update(context *fiber.Ctx) error {
@@ -181,10 +172,7 @@ func (usuarioController *UsuarioController) Update(context *fiber.Ctx) error {
 //	@Produce		json
 //	@Param			usuario				body		model.UsuarioLogin	true	"Autenticar Usuario"
 //	@Success		200					{object}	model.UsuarioLogin
-//	@Failure		400					{object}	config.HTTPError400
-//	@Failure		401					{object}	config.HTTPError401
-//	@Failure		404					{object}	config.HTTPError404
-//	@Router			/usuarios/logar 																				[post]
+//	@Router			/usuarios/logar 																								[post]
 func (usuarioController *UsuarioController) Autenticar(c *fiber.Ctx) error {
 
 	var usuarioLogin model.UsuarioLogin
